# multipass

./: BITWARDEN_TESTING.md  Cargo.toml  README.md  bench_keepass.rs  build.sh  config-bitwarden.yaml  config-lin.yaml  config-mac.yaml  config-win.yaml  configy.yaml  quick-test-bitwarden.sh  test-bitwarden.sh  test_config.yaml  testpass.kdbx  testpasswd
src/: args.rs  config.rs  db_helper.rs  main.rs  otp.rs  output.rs  search.rs
src/backend/: bitwarden.rs  keepass.rs  keychain.rs  mod.rs
