[package]
name = "kpasscli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
keepass = "0.8.16"
rpassword = "7.0"
arboard = "3.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
dirs = "5.0"
chrono = "0.4"
which = "4.4"
home = "=0.5.9"
hex-literal = "=0.4.1"
totp-rs = "5.7.0"
url = "2.5.7"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[[bin]]
name = "kpasscli"
path = "src/main.rs"

[[bin]]
name = "bench_keepass"
path = "bench_keepass.rs"
